# dragon-bot

./: Cargo.toml
src/: main.rs  util.rs
src/core/: commands.rs  event_handler.rs  mod.rs  module.rs  modules.rs  permissions.rs
src/module/: commands.rs  event_handler.rs  manager.rs  mod.rs  modules.rs
src/module/config/: command.rs  entry.rs  mod.rs  permission.rs
src/module/errors/: command.rs  config.rs  mod.rs  permissions.rs
src/module/module_manager/: command.rs  config.rs  mod.rs  permission.rs
src/module/permissions/: command.rs  config.rs  mod.rs  permission.rs
src/module/tg_verify/: config.rs  discord_link.rs  mod.rs
src/module/tgdb/: config.rs  mod.rs
