[package]
name = "dragon-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.7"
log = "0.4.26"
mysql = { version = "26.0.0", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = "0.12.4"
tokio = { version = "1.44.1", features = ["full", "macros", "sync"] }
