[package]
name = "dragon-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
fern = { version = "0.7.1", features = ["colored"] }
log = "0.4.26"
mysql = { version = "26.0.0", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = "0.12.4"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full", "macros", "sync"] }
